--- a/01.Monitoring_with_ELK/config/logstash_jmx_kafka.yml
+++ b/01.Monitoring_with_ELK/config/logstash_jmx_kafka.yml
@@ -39,7 +39,7 @@ output{
   codec => rubydebug
  }
  elasticsearch {
-   hosts => "10.178.50.103:9200"
+   hosts => "localhost:9200"
    index => "kafka_mon"
  }
 }
