fix jmx conf syntax error

--- a/01.Monitoring_with_ELK/config/jmx_conf/jmx_kafka_producer.conf
+++ b/01.Monitoring_with_ELK/config/jmx_conf/jmx_kafka_producer.conf
@@ -15,16 +15,16 @@
   },
   {
     "object_name" : "kafka.producer:type=producer-metrics,client-id=*",
-    "attributes" : ["response-rate"],
+    "attributes" : ["response-rate"]
   },
   {
     "object_name" : "kafka.producer:type=producer-metrics,client-id=*",
-    "attributes" : ["request-latency-avg"],
+    "attributes" : ["request-latency-avg"]
   },
   {
     "object_name" : "java.lang:type=OperatingSystem",
     "object_alias" : "OperatingSystem",
     "attributes" : ["SystemCpuLoad"]
-   }    
+   }
  ]
 }
